----------------------------------------------------------------------
 OmegaT 2.1.2 
----------------------------------------------------------------------
  6 Enhancements
  3 Bugfixes
----------------------------------------------------------------------
2.1.2 vs. 2.1.1

  Implemented requests:

   - Selection of files to translate in console mode
  http://sourceforge.net/support/tracker.php?aid=2890282

  - Allow translating or not presentation notes in Impress
  http://sourceforge.net/support/tracker.php?aid=2926510

  Other enhancements:
  
  - The About dialog displays memory usage

  - When there are several 100% matches, and one of them is a real
exact match, it is ordered first

  - Spaces around segments are better preserved in the HTML filter

  - Support for Lingvo DSL dictionaries

  Bug fixes:

  - When the project was reloaded after pressing OK in Project Properties,
the current segment was moved to the next one. If "Copy source text" was
set in Editing Behaviour, the previous segment was entered as translation.

  - OmT loses msgctxt content in PO files
  http://sourceforge.net/support/tracker.php?aid=2920637

  - Same accelerator for "Tab", "Team" and "Tag Validation"
  http://sourceforge.net/support/tracker.php?aid=2929351

----------------------------------------------------------------------
 OmegaT 2.1.1
----------------------------------------------------------------------
  8 Enhancements
  6 Bugfixes
----------------------------------------------------------------------
2.1.1 vs. 2.1.0

  Implemented requests:

   - [stopwords] (simplify segments for matching purposes)
  http://sourceforge.net/support/tracker.php?aid=1599201
 (Requires version 0.4-2.1 of the tokenizers for English)

   - Dated TUs in TM
  http://sourceforge.net/support/tracker.php?aid=1546824

  - Automatic bundle aligner in console mode
  http://sourceforge.net/support/tracker.php?aid=2911321

  Other enhancements:

  - Typo3 LocManager File Filter
