@@ -13,6 +13,7 @@ editInsertTranslationMenuItem=ctrl I
 editOverwriteMachineTranslationMenuItem=ctrl M
 editOverwriteSourceMenuItem=ctrl shift R
 editInsertSourceMenuItem=ctrl shift I
+editTagPainterMenuItem=ctrl shift T
 editExportSelectionMenuItem=ctrl shift C
 editFindInProjectMenuItem=ctrl F
 editSelectFuzzy1MenuItem=ctrl 1
